<resources>
    <string name="app_name">Pmkvy</string>
    <string name="goto_training_centre">Goto Training Centre</string>
    <string name="goto_sign_up">Goto Sign UP</string>
    <string name="centre_name_centre_info">Centre Name </string>
    <string name="address_centre_info">Address </string>
    <string name="district_centre_infor">District </string>
    <string name="state_centre_info">State </string>
    <string name="centre_poc_details"> <u>Centre POC Details</u> </string>
    <string name="centre_details"> <u>Centre Details</u></string>
    <string name="poc_name_centre">Name </string>
    <string name="poc_email_centre">Email </string>
    <string name="link">http://192.168.43.5:8000</string>
    <string name="notify_homepgae">Notify</string>
    <string name="courses_under_training_center">Courses under training center</string>
    <string name="_2_week_gardner_course">2 Week Gardner Course</string>
    <string name="job_role">Job Role:</string>
    <string name="gardner">Gardner</string>
    <string name="sector_skill_council">Sector Skill Council:</string>
    <string name="agriculture">Agriculture</string>
    <string name="view">View</string>
    <string name="amalgamated_plantations_industrial_training_centre_rowta_chariali_station_road">Amalgamated Plantations Industrial Training Centre Rowta Chariali Station Road</string>
    <string name="darrang">Darrang</string>
    <string name="assam">Assam</string>
    <string name="muna_pathak">Muna Pathak</string>
    <string name="get_direction_in_map">Get Direction in Map</string>
    <string name="view_courses_under_this_training_center">View Courses under this training center</string>
    <string name="no_of_days">No. Of Days :</string>
    <string name="min_qualification">Min.Qualification:</string>
    <string name="batches_under_this_course">Batches under this course</string>
    <string name="view_course_details">View Course Details</string>
    <string name="course_name">Course Name</string>
    <string name="sdc_rowta">SDC_Rowta</string>
    <string name="job_role_info">Job Role</string>
    <string name="skill_sector">Skill Sector :</string>
    <string name="course_level">Course Level :</string>
    <string name="job_role_1">Job Role:</string>
    <string name="gardner_1">Gardner</string>
    <string name="sector_skill_council_1">Sector Skill Council:</string>
    <string name="agriculture_1">Agriculture</string>
    <string name="view_1">View</string>
    <string name="select_course">Select Course</string>
    <string name="subject">Subject</string>
    <string name="detail">Detail</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="hello_world">hello_world</string>
    <string name="about_pmkvy_program">About PMKVY Program</string>
    <string name="find_nearest_traning_centre">Find Nearest Traning Centre</string>
    <string name="browse_course">Browse Course</string>
    <string name="feedback">feedback</string>
    <string name="news_and_notices">News and Notices</string>
    <string name="login">Login</string>
    <string name="not_a_member_click_here">Not a member, Click here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="android_notificaton">Android Notificaton</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="vaibhav_pandey">Vaibhav Pandey</string>
    <string name="s_k_pandey">S.K.Pandey</string>
    <string name="appuser1_gmail_com">appuser1@gmail.com</string>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="disabled">Disabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bpl">BPL</string>
    <string name="yes_1">Yes</string>
    <string name="no_1">No</string>
    <string name="address_details">ADDRESS DETAILS</string>
    <string name="flat_no_204_shiv_kripa_tower_1">Flat no. 204, Shiv Kripa Tower-1</string>
    <string name="durg">Durg</string>
    <string name="chhattisgarh">Chhattisgarh</string>
    <string name="educational_details">EDUCATIONAL DETAILS</string>
    <string name="b_e">B.E.</string>
    <string name="ola_driver">Ola driver</string>
    <string name="it_industry">IT industry</string>
    <string name="telecommunications">Telecommunications</string>
    <string name="ready_to_relocate">Ready to relocate?</string>
    <string name="yes_2">Yes</string>
    <string name="no_2">No</string>
    <string name="agree_to_register">Agree to register?</string>
    <string name="yes_3">Yes</string>
    <string name="no_3">No</string>
    <string name="update">Update</string>
    <string name="personal_details_1">Personal Details</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="change">Change</string>
    <string name="contact_details">Contact Details</string>
    <string name="email_1">Email :</string>
    <string name="enter_email">Enter email</string>
    <string name="contact">Contact:</string>
    <string name="location">Location</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="app_settings">App Settings:-</string>
    <string name="language">Language</string>
    <string name="update_1">Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="name_1">Name</string>
    <string name="email_2">Email</string>
    <string name="password_1">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="ongoing_courses">Ongoing Courses</string>
    <string name="gardener_course">2 Week Gardner Course</string>
    <string name="job_role_2">Job Role: Gardner</string>
    <string name="skill_council">Sector Skill Council: Agriculture</string>
    <string name="view_2">View</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="sector_skill_council_2">Sector Skill Council:</string>
    <string name="agriculture_2">Agriculture</string>
    <string name="view_3">View</string>
    <string name="loll">LOLL</string>
    <string name="ljhoh">LJHOH</string>
    <string name="phone">PHONE</string>
    <string name="info">INFO</string>
    <string name="call">Call</string>
    <string name="language_selector_hindi">हिंदी</string>
    <string name="find_tc_gps">Find Training center using gps</string>
    <string name="login_student">Login as student</string>
    <string name="login_employer">Login as employer</string>
</resources>
