<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            style="@style/training_center_list_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/centre_name"
                style="@style/training_center_list_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/loll" />

            <TextView
                android:id="@+id/centre_address"
                style="@style/training_center_list_card_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/centre_name"
                android:clickable="true"
                android:text="@string/ljhoh" />

            <TextView
                android:id="@+id/centre_phone_no"
                style="@style/training_center_list_card_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/centre_address"
                android:clickable="true"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/centre_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/centre_phone_no"
                android:clickable="true"
                android:padding="5dp"
                android:text="@string/info"
                android:visibility="gone" />

            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/holo_green_dark"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/call"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grade"
                android:clickable="true"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/grade_find"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>