<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TableLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp"

                android:weightSum="5">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/logo" />


            </TableRow>

            <TableRow
                android:padding="5dp"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    >

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <Button

                            android:id="@+id/about_pmkvy_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            android:background="@android:color/holo_orange_light"
                            android:text="@string/about_pmkvy_program"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <Button
                            android:id="@+id/find_training_center_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@android:color/holo_orange_light"
                            android:text="@string/find_nearest_traning_centre"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>

            </TableRow >


            <TableRow android:weightSum="2"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="2"

                    >

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <Button
                            android:id="@+id/browse_course_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@android:color/holo_orange_light"
                            android:text="@string/browse_course"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <Button
                            android:id="@+id/feedback_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            android:background="@android:color/holo_orange_light"
                            android:text="@string/feedback"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </android.support.v7.widget.CardView>
                </LinearLayout>


            </TableRow>


            <TableRow android:padding="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@android:color/holo_orange_light"
                        android:text="@string/news_and_notices"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone"/>
                    <Button
                        android:id="@+id/find_gps"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@android:color/holo_orange_light"
                        android:text="@string/find_tc_gps"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

            </TableRow>


        </TableLayout>


    </LinearLayout>
</ScrollView>